# app.js
@@ -23,7 +23,7 @@ app.use(express.static(path.join(__dirname, 'public')));
 
 app.use('/', indexRouter);
 app.use('/datatable', datatableRouter);
-app.use('/api', apiRouter);
+app.use('/api/waeijiten', apiRouter);
 
 
 // catch 404 and forward to error handler
