# openapi.json
@@ -3,18 +3,14 @@
   "info": {
     "title": "Waei Jiten Data",
     "description": "Japanese-English dictionary with example sentences",
-    "author": "Heidi Sokolovski",
-    "publicationDate": "2023-10-30",
-    "source": "https://www.edrdg.org/wiki/index.php/JMdict-EDICT_Dictionary_Project",
-    "language": "English, Japanese",
-    "characterEncoding": "UTF-8",
-    "license": "Creative Commons Attribution-ShareAlike Licence (V3.0)",
-    "distributions": "CSV, JSON",
-    "currentVersion": "1.3",
+    "license": {
+      "name": "Creative Commons Attribution-ShareAlike Licence (V3.0)",
+      "url": "https://creativecommons.org/licenses/by-sa/3.0/"
+    },
     "version": "1.3"
   },
   "paths": {
-    "/api/": {
+    "/api/waeijiten/": {
       "get": {
         "description": "Returns a collection",
         "responses": {
@@ -35,13 +31,16 @@
           "201": {
             "description": "The request succeeded, and a new resource was created as a result"
           },
+          "400": {
+            "description": "Invalid input"
+          },
           "default": {
             "description": "Unexpected error"
           }
         }
       }
     },
-    "/api/kanji": {
+    "/api/waeijiten/kanji": {
       "get": {
         "description": "Returns a json of kanji in the collection",
         "responses": {
@@ -54,7 +53,7 @@
         }
       }
     },
-    "/api/reading": {
+    "/api/waeijiten/reading": {
       "get": {
         "description": "Returns a json of readings in the collection",
         "responses": {
@@ -67,7 +66,7 @@
         }
       }
     },
-    "/api/gloss": {
+    "/api/waeijiten/gloss": {
       "get": {
         "description": "Returns a json of glosses in the collection",
         "responses": {
@@ -80,7 +79,7 @@
         }
       }
     },
-    "/api/{id}": {
+    "/api/waeijiten/{id}": {
       "get": {
         "description": "Returns a resource with the provided id",
         "responses": {
@@ -88,7 +87,7 @@
             "description": "Data with the provided id fetched"
           },
           "400": {
-            "description": "The server could not understand the request due to invalid syntax."
+            "description": "The server could not understand the request due to invalid syntax"
           },
           "404": {
             "description": "Entry with the provided id doesn't exist"
@@ -105,7 +104,7 @@
             "description": "The request succeeded"
           },
           "400": {
-            "description": "The server could not understand the request due to invalid syntax."
+            "description": "The server could not understand the request due to invalid syntax"
           },
           "404": {
             "description": "Entry with the provided id doesn't exist"
@@ -122,7 +121,7 @@
             "description": "Entry with the provided id successfully deleted"
           },
           "400": {
-            "description": "The server could not understand the request due to invalid syntax."
+            "description": "The server could not understand the request due to invalid syntax"
           },
           "404": {
             "description": "Entry with the provided id doesn't exist"
@@ -133,7 +132,7 @@
         }
       }
     },
-    "/api/openapi": {
+    "/api/waeijiten/openapi": {
       "get": {
         "description": "Returns the OpenAPI specification",
         "responses": {
